fix : #32 - 예시 수정